# githubdata

./: README.md  pyproject.toml
src/githubdata/: github_data_repo.py  main.py  utils.py
