[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "githubdata"
version = "16.1.2"
authors = [{ name = "Mahdi Mir", email = "imahdimir@gmail.com" }]
description = "A simple Python package to easily download from and manage a GitHub \"Data repository\""
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "giteasy",
    "fastparquet",
    "pyarrow",
    "pandas",
]
